--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,7 +12,8 @@ spring.jpa.hibernate.ddl-auto=update
 
 # JWT Configuration
 jwt.secret=erSBlNCW8VkOhAPrzH67UjZgnb0rR_oiBkJG4Z2h7e6wX5tDQTO5n1QL2Sy0JeR51tVS1u9W8r4iQ4p4AVZhKA
-jwt.expiration=86400
-jwt.refresh.expiration=604800
-#7 days in seconds
-# 24 hours in seconds
+jwt.access-token-expiration=3600000
+# 1 gi? tính b?ng milliseconds
+jwt.refresh-token-expiration=604800000
+# 1 tu?n tính b?ng milliseconds
+
