--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ jwt.access-token-expiration=3600000
 jwt.refresh-token-expiration=604800000
 # 1 tu?n tính b?ng milliseconds
 # Cho phép t?t c? các ngu?n (không nên dùng trong production)
-spring.web.cors.allowed-origin-patterns=*
-spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
-spring.web.cors.allowed-headers=Authorization,Content-Type,Accept
-spring.web.cors.allow-credentials=true
+#spring.web.cors.allowed-origin-patterns=*
+#spring.web.cors.allowed-methods=GET,POST,PUT,DELETE,OPTIONS
+#spring.web.cors.allowed-headers=Authorization,Content-Type,Accept
+#spring.web.cors.allow-credentials=true
 
